# dg_optitrack_sdk

./: CMakeLists.txt  README.md  package.xml
include/: optitrack_client_entity.hpp
include/dg_optitrack_sdk/: optitrack_client_entity.hpp
src/: CMakeLists.txt  optitrack_client_entity.cpp
srcpy/: entities_dg_python_module.cpp
