<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>


<package format="3">

    <name>dg_optitrack_sdk</name>
    <version>1.0.0</version>
    
    <description>
        Dynamic Graph interface to the Optitrack NatNet networking client
        (mocap4r2_optitrack_driver).
    </description>

    <maintainer email="sofiak@andrew.cmu.edu">Sofia Kwok</maintainer>

    <license>BSD-3-clause</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>

    <!-- CMake module containing helper to find the OS, boost, python, etc. -->
    <depend>mpi_cmake_modules</depend>
    <depend>mocap4r2_optitrack_driver</depend>
    <depend>dynamic-graph</depend>
    <depend>dynamic-graph-python</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>
